--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build && cp dist/index.html dist/404.html",
+    "predeploy": "npm run build && cp dist/index.html dist/404.html && cp sitemap.xml dist/",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
@@ -82,6 +82,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
-    "vite": "^5.4.19"
+    "vite": "^5.4.19",
+    "vite-plugin-sitemap": "^0.8.2"
   }
 }
